[tool.poetry]
name = "keycloak-postgresql-kubernetes"
version = "0.1.0"
description = ""
authors = ["Max Pfeiffer <max@maxpfeiffer.ch>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
click = "8.1.7"
python-on-whales = "0.74.0"

[tool.poetry.group.dev.dependencies]
docker-image-py = "0.1.13"
furl = "2.1.3"
httpx = "0.28.1"
pre-commit = "4.0.1"
pytest = "8.3.4"
pytest-cov = "6.0.0"
testcontainers = "4.9.0"
semver = "3.0.2"
trustme = "1.2.0"
bcrypt = "4.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
